@@ -99,6 +99,7 @@
 	- fix: don't set MARK64 if libdir already ends in 64 (#205939).
 	- convert '-' to '_' within --define macro names (#124995).
 	- fix: fts_close double free traversing an active tree (#222089).
+	- use ".ufdio" as rpmio default, remove ".ufdio" markers.
 
 4.4.6 -> 4.4.7:
 	- start 4.4.7 development.
